--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,15 @@ body {
   overflow-x: hidden;
 }
 
+.custom-menu-hamburguer {
+  display: none;
+}
+
+.custom-navbar {
+  display: flex;
+  gap: 10px;
+}
+
 .custom-nav {
   background-color: var(--primary);
 }
@@ -43,4 +52,14 @@ footer {
   padding: 2rem;
   text-align: center;
   box-shadow: 0px -2px 5px 0px rgba(0, 0, 0, 0.127);
+}
+
+@media (max-width: 610px) {
+  .custom-menu-hamburguer {
+    display: block;
+  }
+
+  .custom-navbar {
+    display: none;
+  }
 }
