--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,27 @@
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .introduction {
+  display: flex;
   background-image: url("../assets/presentation-desktop.png");
-  background-size: contain;
-  background-repeat: no-repeat;
+  background-size: cover;
   height: 700px;
+  width: 100vw;
   color: var(--white-text);
-  padding: 4% 0 0 6%;
+  justify-content: center;
 }
 
 .introduction h1 {
   font-size: 3rem;
+}
+
+.introduction .description {
+  padding-top: 4rem;
+  width: 90%;
 }
 
 .introduction p {
@@ -16,16 +29,93 @@
   font-size: 1.2rem;
 }
 
-.introduction h1, .introduction p {
+main {
+  background-color: var(--background);
+}
+
+.introduction h1,
+.introduction p {
   width: 40%;
+}
+
+.about {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 90%;
+  padding: 3rem 0;
+}
+
+.about .description {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.about .description h2 {
+  font-size: 3rem;
+}
+
+.about .description h2 {
+  text-align: right;
+  color: var(--primary);
+}
+
+.about .description p {
+  padding: 1rem 0;
+  text-align: right;
+  width: 80%;
+  color: var(--secondary);
+  font-size: 1.5rem;
+}
+
+.about .description .statistics {
+  display: flex;
+  width: 90%;
+  justify-content: flex-end;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.about .description .statistics p {
+  margin: 0 1rem;
+}
+
+.statistics .custom-card {
+  display: flex;
+  width: 30%;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  border: 1;
+  background-color: transparent;
+}
+
+.statistics .custom-card h2 {
+  color: var(--secondary);
+  font-size: 4rem;
+  text-align: center;
+}
+
+.statistics .custom-card p {
+  color: var(--secondary);
+  font-size: 1rem;
+  width: 90%;
+  text-align: center;
 }
 
 .features {
   background-color: var(--secondary);
   display: flex;
+  width: 100%;
   align-items: center;
-  padding-top: 1rem;
+  justify-content: center;
+  padding: 3rem 0;
   gap: 20px;
+}
+
+.features .features-container {
+  display: flex;
+  width: 90%;
 }
 
 .features .custom-card {
@@ -47,39 +137,44 @@ p {
   width: 150px;
 }
 
+@media (max-width: 1600px) {
+  .about {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about .description p {
+    text-align: center;
+  }
+
+  .about .description {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+}
+
 @media (max-width: 1400px) {
   .introduction h1 {
     font-size: 2.5rem;
   }
-  
+
   .introduction p {
     font-size: 1.1rem;
+  }
+
+  .about .description p {
+    width: 100%;
   }
 }
 
 @media (max-width: 1100px) {
-  .introduction {
-    padding: 2% 0 0 4%;
-  }
-
-  .introduction h1 {
-    font-size: 2.2rem;
-  }
-  
-  .introduction p {
-    font-size: 1rem;
+  .about .description {
+    text-align: center;
   }
 }
 
 @media (max-width: 840px) {
-  .introduction {
-    padding: 0 0 0 3%;
-  }
-
-  .introduction h1 {
-    font-size: 1.8rem;
-  }
-  
   .introduction p {
     font-size: 1rem;
     width: 45%;
@@ -104,9 +199,9 @@ p {
 
 @media (max-width: 750px) {
   .introduction h1 {
-    font-size: 1.5rem;
+    width: 80%;
   }
-  
+
   .introduction p {
     font-size: 0.8rem;
     width: 45%;
@@ -119,20 +214,24 @@ p {
   .custom-navbar a {
     font-size: 0.75rem;
   }
+
+  .about .description h2 {
+    text-align: center;
+  }
 }
 
 @media (max-width: 610px) {
   .introduction {
     background-image: url("../assets/presentation-mobile.png");
-    background-size: cover;
-    height: 600px;
-    color: var(--white-text);
-    padding-top: 2rem;
     text-align: center;
+    padding: 0;
+  }
+
+  .introduction .description {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0;
+    text-align: center;
   }
 
   .introduction p {
@@ -140,7 +239,9 @@ p {
     font-size: 1rem;
   }
 
-  .introduction h1, .introduction p, p {
+  .introduction h1,
+  .introduction p,
+  p {
     width: 90%;
   }
 
@@ -148,7 +249,12 @@ p {
     margin-top: 2rem;
   }
 
-  .about h2 {
+  .about .description .statistics p,
+  h2 {
+    padding: 0.5rem 0;
+  }
+
+  .about .description h2 {
     padding: 2rem 0;
   }
 
@@ -163,19 +269,25 @@ p {
     align-items: center;
   }
 
-  .about h2 {
-    color: var(--primary);
-    width: 100%;
-    text-align: center;
+  .about .description .statistics {
+    flex-direction: column;
   }
 
-  .about p {
+  .about .description .statistics .custom-card {
+    width: 100%;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  .about .description p {
     padding: 1rem;
     text-align: justify;
     color: var(--secondary);
   }
 
-  .features {
+  .features .features-container {
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
   }
 
