--- a/styles/scss/home.scss
+++ b/styles/scss/home.scss
@@ -1,3 +1,9 @@
+$primary: #2ea06a;
+$secondary: #277340;
+$black-text: #000000;
+$white-text: #ffffff;
+$background: #f7f6f5; 
+
 main{
   display: flex;
   flex-direction: column;
@@ -16,7 +22,7 @@ main{
   }
 
   &::-webkit-scrollbar-thumb{
-    background-color: var(--secondary);
+    background-color: $secondary;
     border-radius: 1rem;
     margin: 2px;
   }
@@ -62,7 +68,7 @@ main{
         font-weight: bold;
       }
       span{
-        color: var(--secondary);
+        color: $secondary;
       }
     }
     width: 100%;
@@ -87,7 +93,7 @@ main{
 .card-category{
   padding: 0.5rem;
   border-radius: 10px;
-  color: var(--white-text);
+  color: $white-text;
 }
 section{
   display: flex;
