--- a/styles/scss/global.scss
+++ b/styles/scss/global.scss
@@ -1,3 +1,9 @@
+$primary: #2ea06a;
+$secondary: #277340;
+$black-text: #000000;
+$white-text: #ffffff;
+$background: #f7f6f5; 
+
   * {
     box-sizing: border-box;
     margin: 0;
@@ -27,22 +33,22 @@
   }
   
   .custom-nav {
-    background-color: var(--primary);
+    background-color: $primary;
   }
   
   .custom-nav a {
-    color: var(--white-text);
+    color: $white-text;
   }
   
   .custom-nav .custom-logo {
-    color: var(--white-text);
+    color: $white-text;
     font-weight: bold;
     font-size: 2rem;
   }
   
   .custom-nav .custom-burger-buttom {
-    color: var(--white-text);
-    border-color: var(--white-text);
+    color: $white-text;
+    border-color: $white-text;
   }
   
   .custom-burger-buttom i {
@@ -50,8 +56,8 @@
   }
   
   footer {
-    background-color: var(--secondary);
-    color: var(--white-text);
+    background-color: $secondary;
+    color: $white-text;
     border-top: 1px solid rgba(0, 0, 0, 0.127);
     padding: 2rem;
     text-align: center;
@@ -62,6 +68,7 @@
     .custom-menu-hamburguer {
       display: block;
     }
+
   
     .custom-navbar {
       display: none;
