--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -7,11 +7,11 @@ main {
 
 .introduction {
   display: flex;
-  background-image: url("../../assets/presentation-desktop.png");
+  background-image: url("../../assets/presentation-mobile.png");
   background-size: cover;
   height: 700px;
   width: 100vw;
-  color: var(--white-text);
+  color: #ffffff;
   justify-content: center;
 }
 
@@ -30,7 +30,7 @@ main {
 }
 
 main {
-  background-color: var(--background);
+  background-color: #f7f6f5;
 }
 
 .introduction h1,
@@ -57,14 +57,14 @@ main {
 
 .about .description h2 {
   text-align: right;
-  color: var(--primary);
+  color: #2ea06a;
 }
 
 .about .description p {
   padding: 1rem 0;
   text-align: right;
   width: 80%;
-  color: var(--secondary);
+  color: #277340;
   font-size: 1.5rem;
 }
 
@@ -91,20 +91,20 @@ main {
 }
 
 .statistics .custom-card h2 {
-  color: var(--secondary);
+  color: #277340;
   font-size: 4rem;
   text-align: center;
 }
 
 .statistics .custom-card p {
-  color: var(--secondary);
+  color: #277340;
   font-size: 1rem;
   width: 90%;
   text-align: center;
 }
 
 .features {
-  background-color: var(--secondary);
+  background-color: #277340;
   display: flex;
   width: 100%;
   align-items: center;
@@ -124,7 +124,7 @@ main {
   align-items: center;
   width: 80%;
   background-color: transparent;
-  color: var(--white-text);
+  color: #ffffff;
   margin-top: 1rem;
 }
 
@@ -205,7 +205,7 @@ p {
 }
 @media (max-width: 610px) {
   .introduction {
-    background-image: url("../assets/presentation-mobile.png");
+    background-image: url("../../assets/presentation-mobile.png");
     text-align: center;
     padding: 0;
   }
@@ -254,7 +254,7 @@ p {
   .about .description p {
     padding: 1rem;
     text-align: justify;
-    color: var(--secondary);
+    color: #277340;
   }
   .features .features-container {
     justify-content: center;
