--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,3 +1,9 @@
+$primary: #2ea06a;
+$secondary: #277340;
+$black-text: #000000;
+$white-text: #ffffff;
+$background: #f7f6f5; 
+
 main {
     display: flex;
     flex-direction: column;
@@ -7,11 +13,11 @@ main {
   
   .introduction {
     display: flex;
-    background-image: url("../../assets/presentation-desktop.png");
+    background-image: url("../../assets/presentation-mobile.png");
     background-size: cover;
     height: 700px;
     width: 100vw;
-    color: var(--white-text);
+    color: $white-text;
     justify-content: center;
   }
   
@@ -30,7 +36,7 @@ main {
   }
   
   main {
-    background-color: var(--background);
+    background-color: $background;
   }
   
   .introduction h1,
@@ -57,14 +63,14 @@ main {
   
   .about .description h2 {
     text-align: right;
-    color: var(--primary);
+    color: $primary;
   }
   
   .about .description p {
     padding: 1rem 0;
     text-align: right;
     width: 80%;
-    color: var(--secondary);
+    color: $secondary;
     font-size: 1.5rem;
   }
   
@@ -91,20 +97,20 @@ main {
   }
   
   .statistics .custom-card h2 {
-    color: var(--secondary);
+    color: $secondary;
     font-size: 4rem;
     text-align: center;
   }
   
   .statistics .custom-card p {
-    color: var(--secondary);
+    color: $secondary;
     font-size: 1rem;
     width: 90%;
     text-align: center;
   }
   
   .features {
-    background-color: var(--secondary);
+    background-color: $secondary;
     display: flex;
     width: 100%;
     align-items: center;
@@ -124,7 +130,7 @@ main {
     align-items: center;
     width: 80%;
     background-color: transparent;
-    color: var(--white-text);
+    color: $white-text;
     margin-top: 1rem;
   }
   
@@ -222,7 +228,7 @@ main {
   
   @media (max-width: 610px) {
     .introduction {
-      background-image: url("../assets/presentation-mobile.png");
+      background-image: url("../../assets/presentation-mobile.png");
       text-align: center;
       padding: 0;
     }
@@ -282,7 +288,7 @@ main {
     .about .description p {
       padding: 1rem;
       text-align: justify;
-      color: var(--secondary);
+      color: $secondary;
     }
   
     .features .features-container {
