feat: add checkbox and form validation

--- a/styles/css/form.css
+++ b/styles/css/form.css
@@ -78,11 +78,15 @@ main .form-container button {
     font-size: 1.1rem;
   }
 }
+main .form-container .custom-checkbox-container {
+  margin: 0.5rem 0 1rem 0;
+}
 main .form-container .custom-input::placeholder {
   color: rgb(178, 177, 177);
 }
 main a {
   text-decoration: none;
+  margin-bottom: 0.4rem;
   font-weight: 500;
 }
 
