--- a/styles/scss/form.scss
+++ b/styles/scss/form.scss
@@ -91,6 +91,10 @@ main {
             }
         }
 
+        .custom-checkbox-container {
+            margin: 0.5rem 0 1rem 0;
+        }
+
         .custom-input::placeholder {
             color: rgb(178, 177, 177);
         }
@@ -98,6 +102,7 @@ main {
 
     a {
         text-decoration: none;
+        margin-bottom: 0.4rem;
         font-weight: 500;
     }
 }
