--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -7,7 +7,7 @@ main {
 
 .introduction {
   display: flex;
-  background-image: url("../../assets/presentation-mobile.png");
+  background-image: url("../../assets/presentation-desktop.png");
   background-size: cover;
   height: 700px;
   width: 100vw;
@@ -110,12 +110,12 @@ main {
   align-items: center;
   justify-content: center;
   padding: 3rem 0;
-  gap: 20px;
 }
 
 .features .features-container {
   display: flex;
   width: 90%;
+  gap: 40px;
 }
 
 .features .custom-card {
@@ -135,6 +135,11 @@ p {
 
 .features .custom-card img {
   width: 150px;
+}
+
+.features-container p {
+  max-width: 350px;
+  text-align: justify;
 }
 
 @media (max-width: 1600px) {
