--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -20,6 +20,11 @@ main {
     color: $white-text;
     justify-content: center;
   }
+
+  .head-img{
+    display: flex;
+    width: 20%;
+  }
   
   .introduction h1 {
     font-size: 3rem;
@@ -183,6 +188,10 @@ main {
     .about .description {
       text-align: center;
     }
+
+    .head-img{
+      width: 40%;
+    }
   }
   
   @media (max-width: 840px) {
@@ -236,6 +245,10 @@ main {
       background-image: url("../../assets/presentation-mobile.png");
       text-align: center;
       padding: 0;
+    }
+
+    .head-img{
+      width: 60%;
     }
   
     .introduction .description {
