--- a/styles/scss/global.scss
+++ b/styles/scss/global.scss
@@ -4,6 +4,27 @@ $black-text: #000000;
 $white-text: #ffffff;
 $background: #f7f6f5; 
 
+.custom-navbar {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.custom-navbar-link {
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+.custom-navbar-link:hover, .custom-logo:hover {
+  transform: scale(1.05);
+}
+
+.custom-logo {
+  color: $white-text;
+  transition: 0.2s;
+  text-decoration: none;
+}
+
   * {
     box-sizing: border-box;
     margin: 0;
