--- a/styles/scss/form.scss
+++ b/styles/scss/form.scss
@@ -76,6 +76,12 @@ main {
             align-items: center;
             justify-content: center;
             margin-top: 10px;
+
+            transition: 0.2s;
+
+            &:hover {
+                opacity: 0.9;
+            }
         
             @media screen {
                 @media (max-width: 1700px) {
