--- a/styles/scss/home.scss
+++ b/styles/scss/home.scss
@@ -2,45 +2,44 @@ $primary: #2ea06a;
 $secondary: #277340;
 $black-text: #000000;
 $white-text: #ffffff;
-$background: #f7f6f5; 
+$background: #f7f6f5;
 
-main{
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.hot-complaints{
+.hot-complaints {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   width: 90%;
   padding-bottom: 0.3rem;
-  &::-webkit-scrollbar{
+  &::-webkit-scrollbar {
     background-color: transparent;
     height: 0.3rem;
   }
 
-  &::-webkit-scrollbar-thumb{
-    background-color: $secondary;
+  &::-webkit-scrollbar-thumb {
+    background-color: #00000052;
     border-radius: 1rem;
     margin: 2px;
   }
 }
 
-.hot-complaints-cards{
+.hot-complaints-cards {
   display: flex;
   width: 100%;
   gap: 1rem;
-
 }
 
-.avatar-card{
+.avatar-card {
   width: 50px;
   height: 50px;
 }
 
-.custom-card{
+.custom-card {
   display: flex;
   flex-direction: column;
   width: 20rem;
@@ -48,26 +47,35 @@ main{
   min-width: 20rem;
   height: 20rem;
   padding: 0.5rem 0;
-  
-  .people{
+  cursor: pointer;
+  &:hover {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  .card-body {
+    padding: 0 1rem;
+  }
+
+  .people {
     padding: 0 0.5rem;
     justify-content: space-between;
     align-items: center;
-    .head-people{
+    .head-people {
       display: flex;
     }
-    .people-desc{
+    .people-desc {
       padding-left: 1rem;
       display: flex;
       flex-direction: column;
-      span, p{
+      span,
+      p {
         margin: 0;
         padding: 0;
       }
-      p{
+      p {
         font-weight: bold;
       }
-      span{
+      span {
         color: $secondary;
       }
     }
@@ -77,11 +85,11 @@ main{
   }
 }
 
-.img-card{
+.img-card {
   margin-top: 1rem;
 }
 
-.card-categories{
+.card-categories {
   display: flex;
   flex-wrap: wrap;
   gap: 0.2rem;
@@ -90,16 +98,23 @@ main{
   padding: 1rem;
 }
 
-.card-category{
+.card-category {
   padding: 0.5rem;
   border-radius: 10px;
   color: $white-text;
 }
-section{
+section {
   display: flex;
   margin-top: 2rem;
 }
-.map-statistcs{
+
+section .section-title {
+  color: #000000a3;
+  padding-bottom: 1rem;
+  padding-top: 2rem;
+}
+
+.map-statistcs {
   margin-top: 2rem;
   width: 90%;
   justify-content: center;
@@ -107,14 +122,15 @@ section{
   flex-direction: column;
 }
 
-.map-statistcs h2{
+.map-statistcs h3 {
   width: 100%;
+  text-align: start;
 }
 
-.map-container{
-  iframe{
+.map-container {
+  iframe {
     width: 90vw;
     height: 500px;
-    border-radius : 10px;
+    border-radius: 10px;
   }
 }
